# pulserver

./: .buildinfo  .gitignore  README.rst  api.html  genindex.html  getting_started.html  hands-on.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: api.doctree  environment.pickle  getting_started.doctree  hands-on.doctree  index.doctree  sg_execution_times.doctree
.doctrees/misc/: code_of_conduct.doctree  contributors.doctree  development.doctree  license.doctree
.github/workflows/: style.yml  test-ci.yml  test-cicd.yml
_modules/: index.html
_modules/pulserver/_core/: _ceq.html  _seqparams.html  _sequence.html
_modules/pypulseq/: opts.html
docker/: Dockerfile
docs/: api.rst  conf.py  generate_notebook.sh  getting_started.rst  hands-on.ipynb  index.rst
docs/misc/: development.rst
examples/: 02-block-design-tour.py  03-plan-tour.py  README.rst
jupyter_execute/: hands-on.ipynb
misc/: code_of_conduct.html  contributors.html  development.html  license.html
src/pulseforge/: __init__.py  _block.py  _ceq.py  _cli.py  _loop.py
src/pulseforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pulseforge/_apps/: SPGR3D.py  (+3 more)
src/pulserver/: __init__.py  _cli.py  _opts.py
tests/: test_opts.py  test_server.py
tests/_core/: test_autoseg.py  test_ceq.py  test_header.py  test_seqparams.py  test_sequence.py
tests/_parsing/: test_paramsparser.py  test_seqparams.py
tests/_server/: test_server.py
tests/helpers/: asserts.py
tests/plan/: test_cartesian.py  test_noncartesian.py
(+79 files in other folders)
